home/scroller — fixed image 8

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -214,7 +214,7 @@ Unknowns:
 					
 					<!-- home slide 8: Evaluation  ———————————————————————————————————————— -->
 					<li class="royalSlide">
-						<img class="royalImage" src="../images/homepage/770001-111_1060x800.png" width="800" height="1060" />
+						<img class="royalImage" src="../images/homepage/770001-111_1060x800.png" width="1060"  />
 								<div class="royalCaption" style="left:620px; top:140px; width:600px; text-align:left; color:black;">
 									<div class="royalCaptionItem title" data-show-effect="fade movetop"  data-move-offset="15" >EVALUATION</div>
 		              <div class="royalCaptionItem subtitle" data-show-effect="fade movetop"  data-move-offset="8" >Lorem ipsum ... </div>
