--- a/app/views/product_types/show.html.erb
+++ b/app/views/product_types/show.html.erb
@@ -11,9 +11,10 @@
 		with this base product. 
 		Then iterates through all of the specific models (= specific products) 
 		the base product is offered in.
-		Has tab set that show other info on the product_type.
+		Has tab set that shows other info on the product_type.
 		NOTE: No source for this information: expand the product_types schema 
-		to include it.  
+		to include it, or define a separate file_type since use of separate product_types
+		is going away with STI implementation of subtypes of Product  
  
 ————————————————————————————————————————————————————————————————————— -->
 
