--- a/app/views/categories/show_bu2.html.erb
+++ b/app/views/categories/show_bu2.html.erb
@@ -143,7 +143,7 @@
 					
 					<!-- Breadcrumb ———————————————————————————————————————————— -->
 					<%= render :partial => "/shared/breadcrumb" %>
-					<!-- <p style="color:red; margin:10px;">DEBUGGING: in view categories/show.html.erb</p> -->
+					<p style="color:red; margin:10px;">DEBUGGING: in view categories/show.html.erb</p>
 			
 					<!-- TABS: repeat subcategories within this category  ——————————————————————————————— -->
 					<!-- Show products for the subcategory that he selected on the home page
@@ -182,17 +182,7 @@
 									
 							 		@category.products.each do |p|
 										case p.type
-										when "ProductSet" %>
-											<div class="product">
-												<a href='<%= product_set_path(p.id) %>'>			
-													<div class="pic">
-														<%= image_tag("/images/products/all_small/" + p.image_filename + ".jpg") %>
-													</div>			
-													<div class="productName"><%= sanitize(p.name[0,37]) %></div>
-												</a>
-											</div>
-										
-										<% when "BaseProduct" %>
+										when "BaseProduct" %>
 										
 											<div class="product">
 												<a href='<%= base_product_path(p.id) %>'>	
@@ -223,31 +213,10 @@
 										<% end # end of the case statement
 						
 									end # end of the do block
-							
-						end %> 
-						<% if !@category.children.empty? %>
-							<!-- <p style="color:red; margin:10px;">DEBUGGING: at intermediate category</p> -->
-							<div class="leafCategories" style="margin-top:20px;">
-
-								<% @category.children.each do |subcat| %>
-
-									<!-- render a clickable partial that displays the subcategory image and name -->
-									<div class="leafCategory">
-										<a href='<%= category_path(subcat.id) %>'>
-											<div class="pic">
-												<%= image_tag("/images/categories/all/" + subcat.image_filename + ".jpg") %>
-											</div>
-											<div class="leafCategoryName"><%= subcat.name %></div>
-										</a>
-									</div>
-
-								<% end %>
-
-								<!-- image to allow the user to close the popup manually --> 
-								<img class="close" src="/images/utility/Close16.png">
-
-							</div><!-- end div.leafCategories -->
-						<% end %> 
+								else # ie, at an intermediate category, not a leaf category
+									render "leafCategories" # DEBUG: not rendering the partial for the leafCategories. Why?
+								end  %> 
+		
                 
 						<div class="clear"></div>
                     
