--- a/app/views/layouts/application_bu.html.erb
+++ b/app/views/layouts/application_bu.html.erb
@@ -30,19 +30,25 @@
 		<%= stylesheet_link_tag "custom-theme/jquery-ui-1.8.10.custom.css" %>
 		
     <%= stylesheet_link_tag "trumedical_base.css" %>
+		<!-- kept from splitting out pieces of mavic.css -->
+		<%= stylesheet_link_tag "menu.css" %>
+		<%= stylesheet_link_tag "select.css" %>
+		<%= stylesheet_link_tag "search.css" %>
+
+
+		<!-- dropped from mavic.css
+		<%= stylesheet_link_tag "tabs.css" %>
 		<%= stylesheet_link_tag "home.css" %>
     <%= stylesheet_link_tag "athletes.css" %>
     <%= stylesheet_link_tag "buttons.css" %>
     <%= stylesheet_link_tag "news.css" %>
     <%= stylesheet_link_tag "product.css" %>
     <%= stylesheet_link_tag "product_compare.css" %>
-    <%= stylesheet_link_tag "search.css" %>
-    <%= stylesheet_link_tag "select.css" %>
-    <%= stylesheet_link_tag "menu.css" %>
     <%= stylesheet_link_tag "tabs.css" %>
     <%= stylesheet_link_tag "technology.css" %>
     <%= stylesheet_link_tag "video.css" %>
     <%= stylesheet_link_tag "webform.css" %>
+		-->
 
 		<!--  csrf_meta_tag %> -->
 		
