--- a/public/stylesheets/left_nav_popups.css
+++ b/public/stylesheets/left_nav_popups.css
@@ -1,8 +1,8 @@
 #popupsContainer { 
 	position: absolute; 
-	top:40px; left:255px; /* was 230: was 270 in tm3ror_bad; 15 +235 + 5 */
-	width: 705px;			
-	z-index:1000;
+	top:40px; left:260px; /* was 230: was 270 in tm3ror_bad; 15 +235 + 5 */
+	width: 700px;			
+	z-index:100; /* black_screen (trumedical_base.css) is z-index 98; menu (menu.css) is 99 */
 }		
 .popup_base { 
 	position:absolute; /* within popupsContainer */ 
@@ -11,27 +11,28 @@
 	background-color:white; 
 	padding:20px 20px 40px 20px; 
 	min-height:34px; 
+	z-index:101;/* was 12 in trumedical2 */
 	} 
 .popup_base h2 { font-size:12px; font-weight:bold; margin-top:10px; margin-bottom:5px;}
 .popup_base p { margin-top:5px; margin-bottom:5px;}
-#popup_modalities {top:-25px;z-index:1001; }
-#popup_clinicalSupplies {top:9px;z-index:1001; }
-#popup_tables {top:44px;z-index:1001;}
-#popup_fitness {top:79px;z-index:1001;}
-#popup_orthopedics {top:114px;z-index:1001;}
-#popup_taping {top:150px;z-index:1001; }
-#popup_evaluation {top:184px;z-index:1001; }
-#popup_dailyLiving {top:220px;z-index:1001; }
-#popup_lymphedema {top:254px;z-index:1001; } 
-#popup_woundCare {top:290px;z-index:1001; }
+#popup_modalities {top:-25px;}
+#popup_clinicalSupplies {top:9px;}
+#popup_tables {top:44px;}
+#popup_fitness {top:79px;}
+#popup_orthopedics {top:114px;}
+#popup_taping {top:150px;}
+#popup_evaluation {top:184px;}
+#popup_dailyLiving {top:220px;}
+#popup_lymphedema {top:254px;} 
+#popup_woundCare {top:290px;}
 
-#popup_trumedical {top:324px;z-index:1001; background-color:#0094DE; color:white;height:355px; overflow:scroll; padding-bottom:20px; }
+#popup_trumedical {top:324px;background-color:#0094DE; color:white;height:355px; overflow:scroll; padding-bottom:20px; }
 
-#popup_patients {top:360px; z-index:12; background-color:orange;
+#popup_patients {top:360px;background-color:orange;
 	height:330px;  overflow:scroll;} 
-#popup_providers {top:394px; z-index:12;background-color:orange;
+#popup_providers {top:394px;background-color:orange;
 	height:300px;  overflow:scroll;}
-#popup_payors {top:430px; z-index:12;background-color:orange;
+#popup_payors {top:430px;background-color:orange;
 	height:240px;  overflow:scroll;}
 #popup_bottom_pad { min-height:40px;}
 div.subcategories { }
