--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -502,9 +502,9 @@ google.load('search', '1');
 				
 				
 				<!-- search by competitor part no ——————————————————————————————— -->
-				<!-- commented out because interfering with devise register/login 
-				<%# render :partial => 'metasearch' %>
-			-->
+				<!-- commented out because interfering with devise register/login -->
+				<%= render :partial => '/shared/metasearch' %>
+		
 				
 				<!-- <a href="#">Competitor Cross Reference:</a> -->
 				<!--
