--- a/app/views/products/search.html.erb
+++ b/app/views/products/search.html.erb
@@ -148,7 +148,9 @@
 				
 				<!-- breadcrumb trail ——————————————————————————————————————————————— -->
 				
-			
+				<!-- menu popups: top level categories ——————————————————————————————————— -->
+				
+				<%= render(:partial => "/shared/menu_popups") %>
 				<div id="error-messages" style="display:none">
 					<div class="messages error"></div>
 				</div>
