--- a/app/views/search/results.html.erb
+++ b/app/views/search/results.html.erb
@@ -57,6 +57,13 @@
 				<div id="error-messages" style="display:none">
 					<div class="messages error"></div>
 				</div>
+				
+				<!-- menu popups: top level categories ——————————————————————————————————— -->
+				
+				<%= render(:partial => "/shared/menu_popups") %>
+				<div id="error-messages" style="display:none">
+					<div class="messages error"></div>
+				</div>
 
 	      <!-- results from Google CSE ———————————————————————————————————————————————————————————— -->
 				<div id="cse" style="width: 100%;">Loading</div>
