--- a/public/stylesheets/trumedical_base.css
+++ b/public/stylesheets/trumedical_base.css
@@ -183,6 +183,8 @@
 			padding-left: 8px;
 			white-space: nowrap;
 		}
+		
+		#metasearch input#search_submit { color:orange; text-align:center; padding-right:10px; width:25px; font-size:9px; line-height:11px;} /* pad out Go */
 
 
 /* ———— within left ————————————————————————————————————————————————*/
