--- a/app/views/devise/mailer/unlock_instructions.html.erb
+++ b/app/views/devise/mailer/unlock_instructions.html.erb
@@ -24,6 +24,10 @@
 	    <!-- main content —————————————————————————————————————————————— -->
 
 			<div id="main_content">
+				
+				<!-- menu popups: top level categories ——————————————————————————————————— -->
+				<%= render(:partial => "/shared/menu_popups") %>
+				
 				<div id="devise_generated_content">
 					<p>Hello <%= @resource.email %>!</p>
 
