--- a/app/views/devise/passwords/edit.html.erb
+++ b/app/views/devise/passwords/edit.html.erb
@@ -26,6 +26,10 @@
 	    <!-- main content —————————————————————————————————————————————— -->
 
 			<div id="main_content">
+				
+				<!-- menu popups: top level categories ——————————————————————————————————— -->
+				<%= render(:partial => "/shared/menu_popups") %>
+				
 				<div id="devise_generated_content">
 
 					<h2>Change your password</h2>
