--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -25,6 +25,9 @@
 	    <!-- main content —————————————————————————————————————————————— -->
 
 			<div id="main_content">
+				<!-- menu popups: top level categories ——————————————————————————————————— -->
+				<%= render(:partial => "/shared/menu_popups") %>
+				
 				<div id="devise_generated_content">
 					<h2>Register</h2>
 
