--- a/app/views/devise/unlocks/new.html.erb
+++ b/app/views/devise/unlocks/new.html.erb
@@ -25,6 +25,9 @@
 	    <!-- main content —————————————————————————————————————————————— -->
 
 			<div id="main_content">
+				
+				<p class="notice"><%= notice %></p> <!-- needed by devise -->
+				<p class="alert"><%= alert %></p> <!-- needed by devise -->
 				<div id="devise_generated_content">
 				
 					<h2>Resend unlock instructions</h2>
