--- a/app/views/devise/confirmations/new.html.erb
+++ b/app/views/devise/confirmations/new.html.erb
@@ -30,6 +30,8 @@
 				<!-- menu popups: top level categories ——————————————————————————————————— -->
 				<%= render(:partial => "/shared/menu_popups") %>
 				
+				<p class="notice"><%= notice %></p> <!-- needed by devise -->
+				<p class="alert"><%= alert %></p> <!-- needed by devise -->
 				<div id="devise_generated_content">
 
 					<h2>Resend confirmation instructions</h2>
