--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -30,6 +30,8 @@
 				<!-- menu popups: top level categories ——————————————————————————————————— -->
 				<%= render(:partial => "/shared/menu_popups") %>
 				
+				<p class="notice"><%= notice %></p> <!-- needed by devise -->
+				<p class="alert"><%= alert %></p> <!-- needed by devise -->
 				<div id="devise_generated_content">
 
 					<h2>Edit <%= resource_name.to_s.humanize %></h2>
@@ -37,18 +39,40 @@
 					<%= form_for(resource, :as => resource_name, :url => registration_path(resource_name), :html => { :method => :put }) do |f| %>
 					
 					  <%= devise_error_messages! %>
+					
+					  <div><%= f.label :first_name %><br />
+					  <%= f.text_field :first_name %></div>
+					
+						<div><%= f.label :last_name %><br />
+					  <%= f.text_field :last_name %></div>
 
 					  <div><%= f.label :email %><br />
 					  <%= f.email_field :email %></div>
 
-					  <div><%= f.label :password %> <i>(leave blank if you don't want to change it)</i><br />
+					  <div><%= f.label :password %> <i>(Leave blank if you don't want to change it.)</i><br />
 					  <%= f.password_field :password %></div>
 
 					  <div><%= f.label :password_confirmation %><br />
 					  <%= f.password_field :password_confirmation %></div>
 
-					  <div><%= f.label :current_password %> <i>(we need your current password to confirm your changes)</i><br />
+					  <div><%= f.label :current_password %> <i><span style="color:orange;">(We need your current password to confirm your changes.)</span></i><br />
 					  <%= f.password_field :current_password %></div>
+					
+						<div><%= f.label "Are you a clinician? " %><br />
+					  <%= f.check_box :clinician %></div>
+					
+						<div><%= f.label "Clinic name" %><br />
+					  <%= f.text_field :clinic_name %></div>
+					
+						<div><%= f.label "Work phone" %><br />
+					  <%= f.telephone_field :phone %></div>
+					
+					  <div><%= f.label "Extension (if any)" %><br />
+					  <%= f.text_field :extension %></div>
+					
+					
+						<div><%= f.label "Price Schedule ( for testing )" %><br />
+					  <%= f.text_field :price_schedule %></div>
 
 					  <div><%= f.submit "Update" %></div>
 
