--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -24,18 +24,16 @@
 			5. Should /shared/_menu.html.erb be included in individual templates:  home, category, product, company — rather than being included in application.html.erb?  div 'subcontainer' binds the menu and content in the main-content area together. ..  
 		-->
 		
-		<meta name="google-site-verification" content="DRniLxcdbLu-qb5STdNUxZI97IojXccx5-6mijdIhjI" />
+		<meta name="google-site-verification"
+		      content="DRniLxcdbLu-qb5STdNUxZI97IojXccx5-6mijdIhjI" />
 	  	<title>TruMedical Solutions</title>
-
-		
-	
 	
 		<%= stylesheet_link_tag "custom-theme/jquery-ui-1.8.10.custom.css" %>
 		
-    	<%= stylesheet_link_tag "trumedical_base.css" %>
+    <%= stylesheet_link_tag "trumedical_base.css" %>
 		<%= stylesheet_link_tag "search.css" %> 
 		<%= stylesheet_link_tag "menu.css" %> 
-    	<%= stylesheet_link_tag "tabs.css" %>
+    <%= stylesheet_link_tag "tabs.css" %>
     	<!-- <%# stylesheet_link_tag "jquery_tools_tabs_no_images.css" %> unused; used by Mavic tabbed sibling nav; not in /public/javascripts -->
 		<%= stylesheet_link_tag "left_nav_popups.css" %> <!-- added by TA 1/4/2012 -->
 	
@@ -45,6 +43,7 @@
 		<%= javascript_include_tag "jquery-1.4.4.min.js" %>
 		<%= javascript_include_tag "jquery-ui-1.8.10.custom.min.js" %>
 		<%= javascript_include_tag "jQuery_Tools.1.2.3.scrollable.js" %> 
+		<!-- <%# javascript_include_tag :defaults %> <!-- included because StackOverflow responce to sign_out delete problem; causing other problems: attempts to link prototype libraries -->
 		
 		<!-- additional js files lumped into mavic.js -->
 		<!-- <%# javascript_include_tag "Cufon.js" %> -->
@@ -59,7 +58,7 @@
 		<!-- what was left in mavic.js after stripping out the above, 3rd-party developed js libraries 
 			   most of this may be in misc.js 
 				It includes the code for showing the modal overlay black_screen -->
-		<!-- <%= javascript_include_tag "mavic_only.js" %> -->
+		<!-- <%# javascript_include_tag "mavic_only.js" %> -->
 
 		<!--  csrf_meta_tag %> -->
 		
@@ -70,8 +69,10 @@
 		
 		<!-- styles for stuff in header: register/login; view-cart checkout -->
 		<style type="text/css">
-			div#register_login { position:absolute; top:20px; right:30px; z-index:98; color:orange;font-size:12px;}
-			div#register_login a { color:orange; font-weight:bold; font-size:12px; } 
+			div#register_login { position:absolute; top:14px; right:30px; z-index:98; color:orange;font-size:12px;}
+			div#register_login a { color:orange; font-weight:bold; font-size:12px; }
+			div#cart_links { margin-top:20px;} 
+			div#cart_links a { font-size:12px!important; }
 		</style>
 		
 		<!-- styles for stuff in footer -->
@@ -298,17 +299,18 @@
 	</head>
 	<body id="body">
 		
-		<!-- flash messages needed by active admin -->
-		<p class="notice"><%= notice %></p>
-		<p class="alert"><%= alert %></p>
+		<!-- flash messages needed by active admin; place these within #main_con-->
+
 
 		<!-- header links  ————————————————————————————————————————————————————————— -->
 		<div id="register_login">
 			<% if user_signed_in? %>
-				<span style="color:black";>Signed in as <%= current_user.email %>. Not you? </span>
+				<span style="color:orange";>Signed in as <%= current_user.email %>. Not you?&nbsp; </span>
 				<%= link_to "Sign out", destroy_user_session_path %>
+				<p style="text-align:right;margin-top:5px;"><%= link_to "My Account", edit_user_registration_path %></p>
 			<% else %>
-				<%= link_to "Register", new_user_registration_path %> or <%= link_to "Sign in", new_user_session_path %>
+				<%= link_to "Register", new_user_registration_path %> or 
+				<%= link_to "Sign in",  new_user_session_path %></br>			
 			<% end %>
 		</div>
 			
@@ -437,33 +439,10 @@ google.load('search', '1');
 			<p>If you suspect that you’re login information has been misused by other parties or fraudulent ordering is occurring on your account, please change your password and contact Customer Service immediately.</p>
 			
 		</div>
-		<div id='requestCatelog'>
-			<div id="catelogImage" style="float:left">
-				<%= image_tag("footer/catelog_cover.jpg") %> <!-- 125x162 -->
-			</div>
-			<!-- <img scr="/images/shared/catelog.jpg" alt="TruMedical Product Catelog" style="float:left;"  > -->
-			<div id="request" style="margin-left: 160px;">
-				<p>If you would like us to mail you a printed copy of our 2011 Product Catelog, please fill in your mailing address below, and indicate how many copies you would like. </p>
-	
-				<% @user = User.new() %> <!-- form_for takes an instance of the model class, not the class itself: awkward for object creation -->
-				<%= form_for @user do |f| %>
-					<%= f.label :first_name %>
-					<%= f.text_field :first_name %><br/>
-					<%= f.label :last_name %>
-					<%= f.text_field :last_name %><br />
-					<%= f.label :email_address %>
-					<%= f.email_field :email_address %><br/>
-					<%= f.label :wants_n_catelogs, "How many would you like?" %>
-					<%= f.number_field :wants_n_catelogs, :size => "3", :in => 1...10 %><br/>
-					
-					<%= f.submit "Submit" %>
-				<% end %>
-					
-					
-				 
-			</div>
-	
-		</div>
+		
+		<!-- comment out to attempt to avoid conflict with devise on Users
+		<%# render :partial => '/shared/request_catelog' %>
+	  -->
 		
 			<%= yield :body %>
 
