--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -17,6 +17,7 @@ ToDo:
 	3. Move include of home.css to this file, and remove it from application.html.erb
 	4. Request a Catalog in footer: popup display; if registered ..., if not ....  Get physical mailing address; now only email address
 	5. Replace Netsuite register/login with Rails-side register/login; push info back into Netsuite?  
+	6. Evaluation slide: move image to the left, so that text doesn't land on top of it. 
 
 Known Bugs:
 	0. left-nav: overlays not coming up 'modal' FIXED 2/23
@@ -132,7 +133,7 @@ Unknowns:
 				
 				<!-- home slide 1: photo collage —————————————————————————————————————— -->
 				<li class="royalSlide" id="slide1">
-					<img class="royalImage" src="http://s3.amazonaws.com/trumedical/images/homepage/collage_01_1060x800.png" width="1060"/>
+					<img class="royalImage" src="/images/homepage/collage_01_1060x800.png" width="1060"/>
 					<div class="royalCaption" style="left:300px; top:310px; width:400px; text-align:left; color:black; ">
 					<div class="royalCaptionItem title" data-show-effect="fade movetop"  data-move-offset="15" >TRU-MEDICAL</div>
              <div class="royalCaptionItem subtitle" data-show-effect="fade movetop"  data-move-offset="8" style="top:35px; left:12px;">partnering with the<br>provider and the payor<br>to meet the needs<br>of the patient</div>
@@ -150,7 +151,7 @@ Unknowns:
 					<img class="royalImage" src="/images/homepage/710016-000_1060x800.png" width="1060" />
 					<div class="royalCaption" style="left:660px; top:140px; width:320px; text-align:left; color:black;">
 						<div class="royalCaptionItem title" data-show-effect="fade movetop"  data-move-offset="15" >MODALITIES</div>
-						<div class="royalCaptionItem subtitle" data-show-effect="fade movetop"  data-move-offset="8" >Electrotheraphy, Ultrasound, and Combination Units</div>
+						<div class="royalCaptionItem subtitle" data-show-effect="fade movetop"  data-move-offset="8" >Electrotherapy, Lotions & Gels, Hot & Cold Therapy, Hydrotherapy, Continuous Passive Motion</div>
 						<div class="royalCaptionItem sgSmallText more" data-show-effect="fade movetop" data-move-offset="8" data-delay="600" ><a class="moreButton non-draggable" href='<%= category_path(1) %>'>More</a></div>
 					</div>
 				</li>
@@ -160,7 +161,7 @@ Unknowns:
 					<img class="royalImage" src="/images/homepage/720033-222_1060x800.png" width="1060" />
 					<div class="royalCaption" style="left:370px; top:220px; width:600px; text-align:left; color:black;">
 						<div class="royalCaptionItem title" data-show-effect="fade movetop"  data-move-offset="15" >CLINICAL SUPPLIES</div>
-						<div class="royalCaptionItem subtitle" data-show-effect="fade movetop"  data-move-offset="8" >Lorem ipsum ... </div>
+						<div class="royalCaptionItem subtitle" data-show-effect="fade movetop"  data-move-offset="8" >Therapeutic Exercise, Balance & Stability, Hand Therapy, Pillows & Cushions, Massage Products, Education</div>
 						<div class="royalCaptionItem sgSmallText more " data-show-effect="fade movetop" data-move-offset="8" data-delay="600" ><a class="moreButton non-draggable" href="<%= category_path(23) %>">More</a></div>
 					</div>
 				</li>
@@ -170,7 +171,7 @@ Unknowns:
 					<img class="royalImage" src="/images/homepage/730026-333_1060x800.png" width="1060" />
 					<div class="royalCaption" style="left:320px; top:140px; width:600px; text-align:left; color:black;">
 						<div class="royalCaptionItem title" data-show-effect="fade movetop"  data-move-offset="15" >TABLES & TRACTION</div>
-						<div class="royalCaptionItem subtitle" data-show-effect="fade movetop"  data-move-offset="8">Lorem ipsum ... </div>
+						<div class="royalCaptionItem subtitle" data-show-effect="fade movetop"  data-move-offset="8">Treatment Tables, Mat Tables Work Tables, Traction Products, Positioning Products</div>
 						<div class="royalCaptionItem sgSmallText more " data-show-effect="fade movetop" data-move-offset="8" data-delay="600"><a class="moreButton non-draggable" href="<%= category_path(43) %>">more</a></div>
 					</div>
 				</li>
@@ -180,7 +181,7 @@ Unknowns:
 					<img class="royalImage" src="/images/homepage/740009-000_1060x800.png" width="1060"  />
 					<div class="royalCaption" style="left:330px; top:140px; width:600px; text-align:left; color:black;">
 						<div class="royalCaptionItem title" data-show-effect="fade movetop"  data-move-offset="15" >FITNESS</div>
-						<div class="royalCaptionItem subtitle" data-show-effect="fade movetop"  data-move-offset="8" >Lorem ipsum ... </div>
+						<div class="royalCaptionItem subtitle" data-show-effect="fade movetop"  data-move-offset="8" >Treadmills, Exercise Bikes, Elliptical Trainers, </br>All Body & Upper Body Exercisers, Fitness Equipment</div>
 						<div class="royalCaptionItem sgSmallText more " data-show-effect="fade movetop" data-move-offset="8" data-delay="600" ><a class="moreButton non-draggable" href="<%= category_path(59) %>">more</a></div>
 					</div>
 				</li>
@@ -190,7 +191,7 @@ Unknowns:
 					<img class="royalImage" src="/images/homepage/750180-000_1060x800.png" width="1060"  />
 					<div class="royalCaption" style="left:620px; top:140px; width:600px; text-align:left; color:black;">
 						<div class="royalCaptionItem title" data-show-effect="fade movetop"  data-move-offset="15" >ORTHOPEDICS</div>
-						<div class="royalCaptionItem subtitle" data-show-effect="fade movetop"  data-move-offset="8" >Lorem ipsum ... </div>
+						<div class="royalCaptionItem subtitle" data-show-effect="fade movetop"  data-move-offset="8" >Splinting Materials & Supplies, Supports including Hand & Wrist, </br>Elbow, Lumbar, Cervical Collars, Knee, Ankle</div>
 						<div class="royalCaptionItem sgSmallText more" data-show-effect="fade movetop" data-move-offset="8" data-delay="600" ><a class="moreButton non-draggable" href="<%= category_path(70) %>">more</a></div>
 					</div>
 				</li>
@@ -200,7 +201,7 @@ Unknowns:
 					<img class="royalImage" src="/images/homepage/760033-000_1060x800.png" width="1060"  />
 					<div class="royalCaption" style="left:360px; top:140px; width:600px; text-align:left; color:black;">
 						<div class="royalCaptionItem title" data-show-effect="fade movetop"  data-move-offset="15" >ATC/TAPING</div>
-						<div class="royalCaptionItem subtitle" data-show-effect="fade movetop"  data-move-offset="8" >Lorem ipsum ... </div>
+						<div class="royalCaptionItem subtitle" data-show-effect="fade movetop"  data-move-offset="8" >Taping & Wrapping Supplies, First-Aid, ATC Products</div>
 						<div class="royalCaptionItem sgSmallText more " data-show-effect="fade movetop" data-move-offset="8" data-delay="600"><a class="moreButton non-draggable" href="<%= category_path(81) %>">more</a></div>
 					</div>
 				</li>
@@ -210,10 +211,17 @@ Unknowns:
 					<img class="royalImage" src="/images/homepage/770001-111_1060x800.png" width="1060"  />
 					<div class="royalCaption" style="left:620px; top:140px; width:600px; text-align:left; color:black;">
 						<div class="royalCaptionItem title" data-show-effect="fade movetop"  data-move-offset="15" >EVALUATION</div>
-						<div class="royalCaptionItem subtitle" data-show-effect="fade movetop"  data-move-offset="8" >Lorem ipsum ... </div>
+						<div class="royalCaptionItem subtitle" data-show-effect="fade movetop"  data-move-offset="8" >Evaluation products including; Strength, Pulse, Range of Motion, </br>Sensory, Weight</div>
 						<div class="royalCaptionItem sgSmallText more " data-show-effect="fade movetop" data-move-offset="8" data-delay="600"><a class="moreButton non-draggable" href="<%= category_path(86) %>">more</a></div>
 					</div>	
 				</li>	
+				
+				<!-- Note: there are no slides for categories Aids to Daily Living, Lymphedema, and Wound Care --> 
+				<!-- If we eventually add them, the text for each should be as follows: 
+						Aids to Daily Living – Reaches, Dressing Aids, Mobility, Wheelchairs, Seating
+						Lymphedema – Bandages, Gloves, Arm Sleeves, Stockings
+						Wound Care – Bandages, Gauze, Wound Cleansers, Suture & Debridement Kits, Phlebotomy Containers, Scar Therapy
+				-->
 
 			</ul> <!-- end of ul with class 'royalSlidesContainer' -->
 		</div> <!-- end of div#bannerRotator --> 
@@ -315,19 +323,39 @@ Unknowns:
 			<div id="popup_providers" class="popup_base">
 				<img class="close" src="/images/utility/close16_white.png">
 				<div class="row">
-					<p>Lorem ipsum ... </p>
-					<p>Lorem ipsum ... </p>
-					<p>Lorem ipsum ... </p>
-					<p>Lorem ipsum ... </p>
-					<p>Lorem ipsum ... </p>
-					<p>Lorem ipsum ... </p>
-					<p>Lorem ipsum ... </p>
-					<p>Lorem ipsum ... </p>
-					<p>Lorem ipsum ... </p>
-					<p>Lorem ipsum ... </p>
-					<p>Lorem ipsum ... </p>
-					<p>Lorem ipsum ... </p>
-					<p>Lorem ipsum ... </p>
+					<p>TruMedical Solutions, LLC. is dedicated to meeting the needs of the patient. This website is dedicated to that end.</p> 
+					<p>We offer the Provider (Physical Therapist, Occupational Therapist, Certified Athletic Trainer, Medical Doctor, Chiropractor etc…) the products they need to help the patient.</p> 
+					<p>We offer ten different categories of products to meet all your clinic needs.</p>
+					<ol>
+						<li>Modalities</li>
+						<li>Clinic Supplies</li>
+						<li>Tables & Traction</li>
+						<li>Fitness & Cardio Equipment</li>
+						<li>Orthopedic Products</li>
+						<li>ATC & Taping</li>
+						<li>Evaluation Products</li>
+						<li>Aids to Daily Living (ADL’s)</li>
+						<li>Lymphedema Products</li>
+						<li>Wound Care Products.</li>
+					</ol>
+
+					<p>Our Website offers many great tools for the clinician.</p>
+					<ol>
+						<li>View All your Transactions</li>
+						<li>Request a Quote</li>
+						<li>Place and Track orders</li>
+						<li>Print a statement</li>
+						<li>Request a catalog</li>
+						<li>Request Support</li>
+						<li>View Custom Pricing</li>
+						<li>View Material Safety Data Sheets (MSDS)</li>
+						<li>Part Number Cross Reference Tool</li>
+						<li>Write a product review</li>
+						<li>View promotions</li>
+						<li>Link to TruMedical Solutions on Twitter & Facebook</li>
+					</ol>
+					<p>We look forward and are thankful to partner with the Provider to meet the needs of the Patient.</p>
+					<p>If you have any questions or comments please feel free to contact us.</p>
 				</div> 
 				<div id="popup_bottom_pad"></div> 
 			</div>
