--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -133,7 +133,7 @@ Unknowns:
 				
 				<!-- home slide 1: photo collage —————————————————————————————————————— -->
 				<li class="royalSlide" id="slide1">
-					<img class="royalImage" src="/images/homepage/collage_01_1060x800.png" width="1060"/>
+					<img class="royalImage" src="/images/homepage/collage_01_1060x800.gif" width="1060"/>
 					<div class="royalCaption" style="left:300px; top:310px; width:400px; text-align:left; color:black; ">
 					<div class="royalCaptionItem title" data-show-effect="fade movetop"  data-move-offset="15" >TRU-MEDICAL</div>
              <div class="royalCaptionItem subtitle" data-show-effect="fade movetop"  data-move-offset="8" style="top:35px; left:12px;">partnering with the<br>provider and the payor<br>to meet the needs<br>of the patient</div>
@@ -148,7 +148,7 @@ Unknowns:
 				
 				<!-- home slide 2: modalities (electrotherapy, ultrasound, ...)  ————— -->
 				<li class="royalSlide" id ="slide2">
-					<img class="royalImage" src="/images/homepage/710016-000_1060x800.png" width="1060" />
+					<img class="royalImage" src="http://s3.amazonaws.com/trumedical/images/homepage/710016-000_1060x800.gif" width="1060" />
 					<div class="royalCaption" style="left:660px; top:140px; width:320px; text-align:left; color:black;">
 						<div class="royalCaptionItem title" data-show-effect="fade movetop"  data-move-offset="15" >MODALITIES</div>
 						<div class="royalCaptionItem subtitle" data-show-effect="fade movetop"  data-move-offset="8" >Electrotherapy, Lotions & Gels, Hot & Cold Therapy, Hydrotherapy, Continuous Passive Motion</div>
@@ -158,7 +158,7 @@ Unknowns:
 				
 				<!-- home slide 3: clinical supplies  ————————————————————————————————— -->
 				<li class="royalSlide">
-					<img class="royalImage" src="/images/homepage/720033-222_1060x800.png" width="1060" />
+					<img class="royalImage" src="http://s3.amazonaws.com/trumedical/images/homepage/720033-222_1060x800.gif" width="1060" />
 					<div class="royalCaption" style="left:370px; top:220px; width:600px; text-align:left; color:black;">
 						<div class="royalCaptionItem title" data-show-effect="fade movetop"  data-move-offset="15" >CLINICAL SUPPLIES</div>
 						<div class="royalCaptionItem subtitle" data-show-effect="fade movetop"  data-move-offset="8" >Therapeutic Exercise, Balance & Stability, Hand Therapy, Pillows & Cushions, Massage Products, Education</div>
@@ -168,7 +168,7 @@ Unknowns:
 				
 				<!-- home slide 4: tables & traction  ————————————————————————————————— -->
 				<li class="royalSlide">
-					<img class="royalImage" src="/images/homepage/730026-333_1060x800.png" width="1060" />
+					<img class="royalImage" src="http://s3.amazonaws.com/trumedical/images/homepage/730026-333_1060x800.gif" width="1060" />
 					<div class="royalCaption" style="left:320px; top:140px; width:600px; text-align:left; color:black;">
 						<div class="royalCaptionItem title" data-show-effect="fade movetop"  data-move-offset="15" >TABLES & TRACTION</div>
 						<div class="royalCaptionItem subtitle" data-show-effect="fade movetop"  data-move-offset="8">Treatment Tables, Mat Tables Work Tables, Traction Products, Positioning Products</div>
@@ -178,7 +178,7 @@ Unknowns:
 				
 				<!-- home slide 5: fitness ———————————————————————————————————————————— -->
 				<li class="royalSlide">
-					<img class="royalImage" src="/images/homepage/740009-000_1060x800.png" width="1060"  />
+					<img class="royalImage" src="http://s3.amazonaws.com/trumedical/images/homepage/740009-000_1060x800.gif" width="1060"  />
 					<div class="royalCaption" style="left:330px; top:140px; width:600px; text-align:left; color:black;">
 						<div class="royalCaptionItem title" data-show-effect="fade movetop"  data-move-offset="15" >FITNESS</div>
 						<div class="royalCaptionItem subtitle" data-show-effect="fade movetop"  data-move-offset="8" >Treadmills, Exercise Bikes, Elliptical Trainers, </br>All Body & Upper Body Exercisers, Fitness Equipment</div>
@@ -188,7 +188,7 @@ Unknowns:
 				
 				<!-- home slide 6: orthopedics ———————————————————————————————————————— -->
 				<li class="royalSlide">
-					<img class="royalImage" src="/images/homepage/750180-000_1060x800.png" width="1060"  />
+					<img class="royalImage" src="http://s3.amazonaws.com/trumedical/images/homepage/750180-000_1060x800.gif" width="1060"  />
 					<div class="royalCaption" style="left:620px; top:140px; width:600px; text-align:left; color:black;">
 						<div class="royalCaptionItem title" data-show-effect="fade movetop"  data-move-offset="15" >ORTHOPEDICS</div>
 						<div class="royalCaptionItem subtitle" data-show-effect="fade movetop"  data-move-offset="8" >Splinting Materials & Supplies, Supports including Hand & Wrist, </br>Elbow, Lumbar, Cervical Collars, Knee, Ankle</div>
@@ -198,7 +198,7 @@ Unknowns:
 				
 				<!-- home slide 7: ATC/Taping ————————————————————————————— -->
 				<li class="royalSlide">
-					<img class="royalImage" src="/images/homepage/760033-000_1060x800.png" width="1060"  />
+					<img class="royalImage" src="http://s3.amazonaws.com/trumedical/images/homepage/760033-000_1060x800.gif" width="1060"  />
 					<div class="royalCaption" style="left:360px; top:140px; width:600px; text-align:left; color:black;">
 						<div class="royalCaptionItem title" data-show-effect="fade movetop"  data-move-offset="15" >ATC/TAPING</div>
 						<div class="royalCaptionItem subtitle" data-show-effect="fade movetop"  data-move-offset="8" >Taping & Wrapping Supplies, First-Aid, ATC Products</div>
@@ -208,7 +208,7 @@ Unknowns:
 				
 				<!-- home slide 8: Evaluation  ———————————————————————————————————————— -->
 				<li class="royalSlide">
-					<img class="royalImage" src="/images/homepage/770001-111_1060x800.png" width="1060"  />
+					<img class="royalImage" src="http://s3.amazonaws.com/trumedical/images/homepage/770001-111_1060x800.gif" width="1060"  />
 					<div class="royalCaption" style="left:620px; top:140px; width:600px; text-align:left; color:black;">
 						<div class="royalCaptionItem title" data-show-effect="fade movetop"  data-move-offset="15" >EVALUATION</div>
 						<div class="royalCaptionItem subtitle" data-show-effect="fade movetop"  data-move-offset="8" >Evaluation products including; Strength, Pulse, Range of Motion, </br>Sensory, Weight</div>
