homepage scroll speed 3000

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -59,7 +59,8 @@ Unknowns:
 						slideshowAutoStart:true,
 						slideTransitionSpeed:800,
 						controlNavEnabled:true,
-						slideSpacing:20,
+						slideSpacing:0,
+						slideshowDelay:3000
 								
 		    });
 	
@@ -82,7 +83,7 @@ Unknowns:
 
 	<style type="text/css">
 		/* #banner-rotator { height: 800px; overflow:hidden; border:none; margin-left:0px; } */
-		.moreButton { background-color:white; color:black; padding:5px 10px 5px 10px;}
+		.moreButton { background-color:gainsboro; color:black; padding:5px 10px 5px 10px;}
 		li.royalSlide a:hover { background-color:black; color:white;}
 		
 	</style>
@@ -147,7 +148,7 @@ Unknowns:
 				</li>
 				
 				<!-- home slide 2: modalities (electrotherapy, ultrasound, ...)  ————— -->
-				<li class="royalSlide" id ="slide2">
+				<li class="royalSlide" id ="slide2" >
 					<img class="royalImage" src="http://s3.amazonaws.com/trumedical/images/homepage/710016-000_1060x800.gif" width="1060" />
 					<div class="royalCaption" style="left:660px; top:140px; width:320px; text-align:left; color:black;">
 						<div class="royalCaptionItem title" data-show-effect="fade movetop"  data-move-offset="15" >MODALITIES</div>
